# SCGTest

./: .gitignore  CMakeLists.txt  README.md  scgtest.h  scgtest_main.cpp
example/: CMakeLists.txt  example1.cpp  example2.cpp  simple_fifo.cpp
